# jags-wiener

./: Makefile.am  README  README.rst  configure.ac  win-configure.sh
example/: Rscript.R  easytask_data.txt  exp1_01_m23r_2012-10-31-110958.txt  inits1.txt  inits2.txt  inits3.txt  runscript.jags
example/JAGS/: inits1.txt  inits3.txt
example/PyMC/: README.rst  wiener.py  wiener_sample.py
example/R/: Rscript.R
example/deterministic_example/: deterministic_node.txt
example/deterministic_example/R/: Rscript.R
example/experiment_example/: easy_model.txt
example/experiment_example/JAGS/: inits1.txt  inits2.txt  inits3.txt  runscript.jags
example/experiment_example/R/: Rscript.R
example/experiment_example/easytask_exp/: expI.py
example/ppdata_example/: complexmodel.txt  easymodel.txt  pp_data.txt
example/ppdata_example/R/: analysis_complex.R  analysis_easymodel.R  complexmodel.R  easymodel.R
example/sampling_example/: sample_model.txt  wiener_model.txt
example/sampling_example/R/: Rsample.R  Rsample_with_sd.R
interfaces/: matjags.m
m4/: Makefile.am  R.m4  axx_blas.m4
src/: Makefile.am  wiener.cc
src/distributions/: DWiener.cc  DWiener.h  DWieners.cc  DWieners.h  Makefile.am  RScalarDist.cc  RScalarDist.h
src/functions/: DFunction.cc  DFunction.h  DLogFunction.cc  DLogFunction.h  Makefile.am  WFunction.cc  WFunction.h
src/jwmath/: Makefile.am  dwiener.c  jwmath.h  pwiener.c  qwiener.c  rwiener.c
win/: Makefile.am  README.WIN  jags.nsi
